--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,18 +1,18 @@
-def appVersionCode = 3
+def appVersionCode = 6
 def appVersionName = new Integer(new Date().format('yy'))-12 + new Date().format('.M.') + new Date().format('ddHHmm')
 
-
 apply plugin: 'com.android.application'
+apply plugin: 'io.fabric'
 
 android {
-    compileSdkVersion 26
+    compileSdkVersion 28
     buildToolsVersion '28.0.3'
 
     defaultConfig {
         applicationId "ca.mulloy.garagedoor"
 
         minSdkVersion 19
-        targetSdkVersion 26
+        targetSdkVersion 28
 
         versionCode = appVersionCode
         versionName = appVersionName
@@ -23,21 +23,37 @@ android {
 
     buildTypes {
         release {
+            debuggable false
             minifyEnabled false
+            shrinkResources false
+            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+        }
+
+        debug {
+            debuggable true
+            minifyEnabled false
+            shrinkResources false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
 }
 
 dependencies {
-    implementation 'com.android.support:appcompat-v7:26.1.0'
-    implementation 'com.android.support:design:26.1.0'
-    implementation 'com.android.support:support-media-compat:26.1.0'
-    implementation 'com.android.support:support-v4:26.1.0'
+    implementation 'com.crashlytics.sdk.android:crashlytics:2.10.1'
 
-    implementation 'com.google.android.gms:play-services-location:16.0.0'
+    implementation 'com.google.firebase:firebase-auth:19.1.0'
+    implementation 'com.google.firebase:firebase-core:17.2.1'
+
+    implementation 'androidx.appcompat:appcompat:1.1.0'
+    implementation 'com.google.android.material:material:1.0.0'
+
+    implementation 'com.android.support.constraint:constraint-layout:1.1.3'
+
+    implementation 'com.google.android.gms:play-services-location:17.0.0'
 
     implementation fileTree(dir: 'libs', include: ['*.jar'])
+
     testImplementation 'junit:junit:4.12'
-    implementation 'com.android.support.constraint:constraint-layout:1.1.3'
 }
+
+apply plugin: 'com.google.gms.google-services'
